// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test suite for RequestResetEmailForm component Because snapshots 1`] = `
<div
  className="row"
>
  <div
    className="col-sm-push-2 col-sm-8 col-xs-12"
  >
    <article
      role="main"
    >
      <header
        className="page-heading page-heading-without-breadcrumb"
      >
        <h1
          className="au-display-xl"
        >
          Reset password
        </h1>
        <p>
          Enter your email address and we'll send you a link to reset your password. Password reset links are valid for 24 hours.
        </p>
      </header>
      <form
        id="sendResetEmail"
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <div
          className="field "
        >
          <label
            className="question-heading au-text-input__label"
            htmlFor="email_address"
            id="email_address-label"
          >
            
          </label>
          <div
            className="au-text-input__hint"
            id="email_address-hint"
          >
            Enter the email address you used to register with the Marketplace
          </div>
          <div
            className="table"
          >
            <input
              aria-describedby="email_address-hint"
              className="au-text-input au-text-input--block"
              defaultValue=""
              disabled={false}
              id="email_address"
              max={null}
              maxLength={0}
              min={null}
              minLength={0}
              name="email_address"
              onChange={[Function]}
              pattern={null}
              placeholder=""
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
        <p>
          <input
            className="au-btn"
            onClick={[Function]}
            type="submit"
            value="Send reset password"
          />
        </p>
      </form>
    </article>
  </div>
</div>
`;

exports[`Test suite for ResetPasswordForm component Because snapshots 1`] = `
<div
  className="row"
>
  <div
    className="col-sm-push-2 col-sm-8 col-xs-12"
  >
    <article
      role="main"
    >
      <header
        className="page-heading page-heading-without-breadcrumb"
      >
        <h1
          className="au-display-xl"
        >
          Reset password
        </h1>
      </header>
      <form
        id="resetPassword"
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <div
          className="field "
        >
          <label
            className="question-heading au-text-input__label"
            htmlFor="password"
            id="password-label"
          >
            Password
          </label>
          <div
            className="au-text-input__hint"
            id="password-hint"
          >
            Your password should be at least 10 characters
          </div>
          <div
            className="table"
          >
            <input
              aria-describedby="password-hint"
              className="au-text-input au-text-input--block"
              defaultValue=""
              disabled={false}
              id="password"
              max={null}
              maxLength={0}
              min={null}
              minLength={0}
              name="password"
              onChange={[Function]}
              pattern={null}
              placeholder=""
              readOnly={false}
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          className="field "
        >
          <label
            className="question-heading au-text-input__label"
            htmlFor="confirmPassword"
            id="confirmPassword-label"
          >
            Password
          </label>
          <div
            className="au-text-input__hint"
            id="confirmPassword-hint"
          >
            Repeat password used above
          </div>
          <div
            className="table"
          >
            <input
              aria-describedby="confirmPassword-hint"
              className="au-text-input au-text-input--block"
              defaultValue=""
              disabled={false}
              id="confirmPassword"
              max={null}
              maxLength={0}
              min={null}
              minLength={0}
              name="confirmPassword"
              onChange={[Function]}
              pattern={null}
              placeholder=""
              readOnly={false}
              type="password"
              value=""
            />
          </div>
        </div>
        <p>
          <input
            className="au-btn"
            onClick={[Function]}
            type="submit"
            value="Reset password"
          />
        </p>
      </form>
    </article>
  </div>
</div>
`;
